Replace occurences of code4sa.org with codeforafrica.org

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Open Gazettes Kenya
-email: gazettes@code4sa.org
+email: gazettes@codeforafrica.org
 url: http://opengazettes.or.ke
 baseurl:
 description: Making Kenyan Government Gazettes freely available.
