--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Open Gazettes Kenya
+title: Open Gazettes Nigeria
 email: gazettes@codeforafrica.org
-url: http://opengazettes.or.ke
-enforce_ssl: opengazettes.or.ke
+url: http://opengazettes.or.ng
+enforce_ssl: opengazettes.or.ng
 baseurl:
 description: Making Government Gazettes freely available.
 twitter:
@@ -36,6 +36,6 @@ exclude: [vendor]
 
 google_analytics: UA-33350783-11
 
-aleph_url: https://search.opengazettes.or.ke
+aleph_url: https://nigeria.opengazettes.co
 s3_url: https://archive.opengazettes.or.ke
 
