--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,6 @@ exclude: [vendor]
 
 google_analytics: UA-33350783-11
 
-aleph_url: https://nigeria.opengazettes.co
+aleph_url: https://search.opengazettes.or.ke
 s3_url: http://nigeria.opengazettes.co.s3-website-eu-west-1.amazonaws.com/
 
