--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Open Gazettes Kenya
+title: Open Gazettes [Country Name]
 email: gazettes@codeforafrica.org
 url: http://opengazettes.or.ke
 enforce_ssl: opengazettes.or.ke
@@ -36,6 +36,6 @@ exclude: [vendor]
 
 google_analytics: UA-33350783-11
 
-aleph_url: https://search.opengazettes.or.ke
-s3_url: https://archive.opengazettes.or.ke
+aleph_url: https://opengazettes.co
+s3_url: http:/[s3_url].amazonaws.com/
 
