--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-BUCKET="opengazettes.or.ke"
+BUCKET="http://opengazettes.or.ng"
 JURISDICTION=
 JURISDICTION_CODE=
