--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Open Gazettes [Country Name]
+title: Open Gazettes Nigeria
 email: gazettes@codeforafrica.org
 url: http://opengazettes.or.ng
 jurisdiction: Nigeria
 jurisdiction_adjective: Nigerian
 jurisdiction_code: NG
-source_attribution: Center for Research Libraries: Global Resource Network
+source_attribution: "Center for Research Libraries: Global Resource Network"
 source_attribution_link: https://dds.crl.edu/crldelivery/27040
 enforce_ssl: opengazettes.or.ng
 baseurl:
