--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,15 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Open Gazettes [Country Name]
+title: Open Gazettes Kenya
 email: gazettes@codeforafrica.org
 url: http://opengazettes.or.ng
-jurisdiction: [Country Name]
-jurisdiction_adjective: [Country Adjective]
-jurisdiction_code: [Country Code]
-source_attribution: [Source Attribution]
-source_attribution_link: [Source Attribution Link]
-enforce_ssl: opengazettes.or.ng
+jurisdiction: Kenya
+jurisdiction_adjective: Kenyan
+jurisdiction_code: KE
+source_attribution: National Council for Law Reporting (Kenya Law)
+source_attribution_link: http://kenyalaw.org/kl/
+enforce_ssl: opengazettes.or.ke
 baseurl:
 description: Making Government Gazettes freely available.
 twitter:
@@ -42,5 +42,5 @@ exclude: [vendor]
 google_analytics: UA-33350783-11
 
 aleph_url: https://opengazettes.co
-s3_url: http:/[s3_url].amazonaws.com/
+s3_url: https://archive.opengazettes.or.ke
 
